--- a/style.css
+++ b/style.css
@@ -427,62 +427,70 @@ span{
     background-color: var(--bg-color);
     width: 50px;
 }
-.services{
-    background: var(--bg-color);
-    color: black;
+
 
 }
 /*something extra for you to*/
-
-/*1*/
-/* Base styles for the services section */
-
-/*end   rada ni chafu lazma niongeze kiasi kiasi*/
+.heading{
+    text-align: center;
+    font-size: 7rem;
+    margin: 5rem 0;
+}
+.services{
+    background-color: var(--bg-color);
+    color: #1a1919;
+}
 .services h2{
-    margin-bottom: 5rem;
-    color: white;
+    color: var(--text-color);
 }
 .services-container{
     display: grid;
-    grid-template-columns: repeat(2,1fr);
+    grid-template-columns: repeat(auto-fit,minmax(300px ,1fr));
     align-items: center;
     gap: 2.5rem;
 }
 .services-box{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: var(--main-color);
-    height: 300px;
+    height: 600px;
     border-radius: 3rem;
-    border: 5px solid transparent;
     cursor: pointer;
+    border: 5px solid transparent;
     transition: 0.4s ease-in-out;
 }
 .services-box:hover{
-    background: white;
-    color: black;
+    background-color:var(--secondary-bg-color);
+    color: var(--main-color);
     border: 5px solid var(--main-color);
     transform: scale(1.03);
 }
-.services-box .service-info{
+.service-info{
     display: flex;
     flex-direction: column;
-    text-align: left;
-    max-height: 200px;
-    justify-content: left;
-    align-items: baseline;
-    padding: 5rem 5rem;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    padding: 5rem;
 }
-.service-info h4{
-    font-size: 3rem;
-    font-weight: 700;
-    line-height: 2;
+.service-info i{
+    font-size: 5rem;
+}
+.service-info h3{
+    font-size: 2rem;
+    font-weight: 600;
 }
 .service-info p{
     font-size: 1rem;
-    font-weight: 600;
-    max-height: 100px;
-    line-height: 1.7;
-    margin-top: auto;
+    font-weight: 500;
+    line-height: 1.5rem;
 }
+/*1*/
+/* Base styles for the services section */
+
+/*end   rada ni chafu lazma niongeze kiasi kiasi*/
+
 .testimonials{
     background: var(--secondary-bg-color);
 }
@@ -679,13 +687,17 @@ span{
 }
 @media(max-width:991px){
      header{
-        padding: 5rem 3%;
+        padding: 2rem 3%;
     }
     section{
-        padding: 20rem 3% 4rem;
+        padding: 10rem 3% 2rem;
     }
     .timeline-items::before{
         left: 7px;
+    }
+    .timeline-item::nth-child(odd){
+        padding-right: 37px;
+        text-align: left;
     }
     .timeline-item:nth-child(odd),
     .timeline-item:nth-child(even){
