--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Fira+Code:wght@300..700&family=Prompt:ital,wght@0,100;0,200;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 
 * {
@@ -6,10 +6,10 @@
     padding: 0;
     box-sizing: border-box;
     text-decoration: none;
-    border: none;
+    border: none; /
     outline: none;
     scroll-behavior: smooth;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Chakra Petch', sans-serif;
 }
 
 :root {
@@ -26,7 +26,7 @@ html{
 
 body {
     background-color: var(--bg-color);
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Chakra Petch', sans-serif;
     color: var(--text-color);
 }
 
